Fix license definition

--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
         "magento/framework": "*",
         "yireo/magento2-loki-checkout": "@dev"
     },
-    "license": [
-        "Open Software License (OSL)"
-    ],
+    "license": "OSL-3.0",
     "autoload": {
         "files": [
             "registration.php"
