--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
     ],
     "type": "magento2-module",
     "require": {
-        "magento/framework": "*",
-        "yireo/magento2-loki-checkout": "@dev"
+        "magento/framework": "^103.0",
+        "buckaroo/magento2": "^1.51",
+        "yireo/magento2-loki-checkout": "~0.0.5"
     },
     "license": "OSL-3.0",
     "autoload": {
