--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "magento/framework": "^103.0",
         "buckaroo/magento2": "^1.51",
-        "yireo/magento2-loki-checkout": "~0.0 | ^1.0"
+        "yireo/magento2-loki-checkout": "~0.0 | ^1.0",
+        "ext-pcre": "*"
     },
     "license": "OSL-3.0",
     "autoload": {
