--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yireo/magento2-loki-checkout-buckaroo",
-    "version": "0.0.2",
+    "version": "1.0.0",
     "description": "N/A",
     "keywords": ["loki-payment"],
     "homepage": "https://loki-checkout.com/",
@@ -13,9 +13,15 @@
     "type": "magento2-module",
     "require": {
         "magento/framework": "^103.0",
-        "buckaroo/magento2": "^1.51",
+        "magento/module-store": "^101.0",
+        "buckaroo/magento2": "^1.40",
+        "yireo/magento2-loki-components": "^1.0",
         "yireo/magento2-loki-checkout": "~0.0 | ^1.0",
+        "ext-json": "*",
         "ext-pcre": "*"
+    },
+    "require-dev": {
+        "yireo/magento2-integration-test-helper": "~0.0"
     },
     "license": "OSL-3.0",
     "autoload": {
