--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "magento/module-store": "^101.0",
         "buckaroo/magento2": "^1.40",
         "yireo/magento2-loki-components": "^1.0",
+        "yireo/magento2-loki-field-components": "^1.0",
         "yireo/magento2-loki-checkout": "~0.0 | ^1.0",
         "ext-json": "*",
         "ext-pcre": "*"
