--- a/.module.ini
+++ b/.module.ini
@@ -1,4 +1,4 @@
-EXTENSION_VENDOR="Yireo"
-EXTENSION_NAME="LokiCheckoutBuckaroo"
-COMPOSER_NAME="yireo/magento2-loki-checkout-buckaroo"
+EXTENSION_VENDOR="LokiCheckout"
+EXTENSION_NAME="Buckaroo"
+COMPOSER_NAME="loki-checkout/magento2-buckaroo"
 PHP_VERSIONS=("8.3","8.4")
