--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yireo/magento2-loki-checkout-buckaroo",
+    "name": "loki-checkout/magento2-buckaroo",
     "version": "1.0.1",
     "description": "N/A",
     "keywords": ["loki-payment"],
@@ -15,9 +15,9 @@
         "magento/framework": "^103.0",
         "magento/module-store": "^101.0",
         "buckaroo/magento2": "^1.40",
-        "yireo/magento2-loki-components": "^1.0",
-        "yireo/magento2-loki-field-components": "^1.0",
-        "yireo/magento2-loki-checkout": "~0.0 | ^1.0",
+        "loki/magento2-components": "^1.0",
+        "loki/magento2-field-components": "^1.0",
+        "loki-checkout/magento2-core": "~0.0 | ^1.0",
         "ext-json": "*",
         "ext-pcre": "*"
     },
@@ -30,7 +30,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Yireo\\LokiCheckoutBuckaroo\\": ""
+            "LokiCheckout\\Buckaroo\\": ""
         }
     }
 }
