--- a/.module.ini
+++ b/.module.ini
@@ -1,4 +1,4 @@
 EXTENSION_VENDOR="LokiCheckout"
 EXTENSION_NAME="Buckaroo"
 COMPOSER_NAME="loki-checkout/magento2-buckaroo"
-PHP_VERSIONS=("8.2","8.3","8.4")
+PHP_VERSIONS=("8.1","8.2","8.3","8.4")
