--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "loki-checkout/magento2-buckaroo",
     "version": "2.0.3",
     "description": "N/A",
-    "keywords": ["loki-payment"],
+    "keywords": [
+        "loki-payment"
+    ],
     "homepage": "https://loki-checkout.com/",
     "authors": [
         {
@@ -12,14 +14,14 @@
     ],
     "type": "magento2-module",
     "require": {
-        "magento/framework": "^103.0",
-        "magento/module-store": "^101.0",
         "buckaroo/magento2": "^1.40",
+        "ext-json": "*",
+        "ext-pcre": "*",
+        "loki-checkout/magento2-core": "^2.0",
         "loki/magento2-components": "^2.0",
         "loki/magento2-css-utils": "^1.0",
-        "loki-checkout/magento2-core": "^2.0",
-        "ext-json": "*",
-        "ext-pcre": "*"
+        "magento/framework": "^103.0",
+        "magento/module-store": "^101.0"
     },
     "require-dev": {
         "yireo/magento2-integration-test-helper": "~0.0"
