--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ services:
   - redis:latest
   - name: yireo/opensearch-dummy
     alias: opensearch
-    command: ["./bin/opensearch", "-E", "discovery.type=single-node"]
+    #command: ["./bin/opensearch", "-E", "discovery.type=single-node"]
 
 cache:
   key: "$CI_JOB_NAME"
