--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "type": "magento2-module",
     "require": {
-        "buckaroo/magento2": "^1.40",
+        "buckaroo/magento2": "^1.40 | ^2.0",
         "ext-json": "*",
         "ext-pcre": "*",
         "loki-checkout/magento2-core": "^2.0",
